<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/tagandsaving"
            android:text="@string/tagandsaving"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:textSize="15sp"
             />

        <Button
            android:id="@+id/download"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:text="@string/download" />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:text="@string/refresh" />
    </LinearLayout>-->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/download"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:src="@drawable/download"
            android:text="@string/download" />

        <ImageView
            android:id="@+id/tagandsaving"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="70dp"
            android:layout_toLeftOf="@id/download"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:src="@drawable/history" />


        <ImageView
            android:id="@+id/refresh"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="70dp"
            android:layout_toRightOf="@id/download"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:src="@drawable/refresh"
            android:text="@string/refresh" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/settingtag"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:src="@drawable/setting"
            android:text="@string/setting" />

        <ImageView
            android:id="@+id/nightday"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="70dp"
            android:layout_toLeftOf="@id/settingtag"
            android:adjustViewBounds="true"
            android:padding="5dp"
            android:src="@drawable/sun" />


        <ImageView
            android:id="@+id/quit"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="70dp"
            android:layout_toRightOf="@id/settingtag"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:src="@drawable/off" />
    </RelativeLayout>

    <!--<TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        >

        <TableRow>

            <Button
                android:id="@+id/tagandsaving"
                android:background="#ffffff"
                android:text="@string/tagandsaving" />

            <Button
                android:id="@+id/download"
                android:text="@string/download" />

            <Button
                android:text="@string/refresh" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/nightday"
                android:text="@string/nightday" />

            <Button
                android:id="@+id/settingtag"
                android:text="@string/setting" />

            <Button
                android:id="@+id/unregister"
                android:text="@string/unregister" />
        </TableRow>
    </TableLayout>-->


</LinearLayout>
